--- a/data/v2rayse-live.yaml
+++ b/data/v2rayse-live.yaml
@@ -1,11 +1,10 @@
 ####################################
 # 创建者：v2rayse.com
-# 客户端：Clash.Meta
-# 创建时间：2023-09-30 09:30:27
+# 客户端：Clash
+# 创建时间：2023-09-30 21:17:41
 # 使用模版：V2RaySE 默认模版
 # 节点数量：10
 ####################################
-# !!当前配置文件请使用基于 Clash.Meta 内核程序
 mixed-port: 7890
 allow-lan: true
 log-level: info
@@ -86,16 +85,16 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"64.32.24.222","port":443,"cipher":"auto","uuid":"cff9d860-7330-4ee1-b072-7142ddf1571d","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/080822272914"}}
-  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"45.199.138.220","port":55107,"cipher":"auto","uuid":"130c9f2e-42b1-4ebf-b345-e26456a061f9","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇳🇱_NL_荷兰->🇬🇧_GB_英国","type":"vless","server":"188.114.96.201","port":443,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/https://octohide.com/routertabrizm137.com/diamond_tm/t.me/azarbayjab1"}}
-  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"199.188.107.153","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695809872050","headers":{"host":"www.66880458.xyz"}}}
-  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"142.4.112.151","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695724315810","headers":{"host":"www.67023582.xyz"}}}
-  - {"name":"🇻🇳_VN_越南","type":"vmess","server":"103.239.67.31","port":80,"cipher":"auto","uuid":"a05b6151-b432-487c-936a-534c20c60c20","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/4gspeed.me"}}
-  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"38.26.135.20","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1694859605321","headers":{"host":"www.39838266.xyz"}}}
-  - {"name":"🇭🇰_HK_香港","type":"vmess","server":"156.245.8.145","port":42952,"cipher":"auto","uuid":"63b4b829-7f01-4e26-b037-f04b1f098765","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"142.4.116.241","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695809872050","headers":{"host":"www.58058761.xyz"}}}
-  - {"name":"🇰🇷_KR_韩国","type":"trojan","server":"ko2.lianpi.xyz","port":64123,"udp":true,"password":"a0043275-5033-4923-9f22-b2f466a8794a","sni":"apple.com","skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"45.199.138.205","port":44094,"cipher":"auto","uuid":"20b30916-e203-412e-8ec0-900f3acd5128","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"142.4.112.149","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695177062956","headers":{"host":"www.67023582.xyz"}}}
+  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"142.4.112.134","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.80128693.xyz"}}}
+  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"198.2.222.71","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.62679611.xyz"}}}
+  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"64.32.24.222","port":443,"cipher":"auto","uuid":"cff9d860-7330-4ee1-b072-7142ddf1571d","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/080822272914"}}
+  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"142.0.129.250","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.64830206.xyz"}}}
+  - {"name":"🇳🇱_NL_荷兰","type":"vmess","server":"154.85.1.244","port":54982,"cipher":"auto","uuid":"1d474f0b-e78d-4af9-bc4a-a467467bc7a7","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_7","type":"vmess","server":"67.21.90.5","port":443,"cipher":"auto","uuid":"28dd6c26-05a5-4bba-8a5d-052b70ac13b2","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1694429908748","headers":{"host":"www.75409854.xyz"}}}
+  - {"name":"🇺🇸_US_美国_8","type":"vmess","server":"142.4.100.201","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.22567471.xyz"}}}
+  - {"name":"🇺🇸_US_美国_9","type":"vmess","server":"198.2.202.69","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.49746402.xyz"}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -104,14 +103,14 @@ proxy-groups:
       - DIRECT
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
       - 🇺🇸_US_美国_3
       - 🇺🇸_US_美国_4
-      - 🇻🇳_VN_越南
       - 🇺🇸_US_美国_5
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_6
-      - 🇰🇷_KR_韩国
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -120,14 +119,14 @@ proxy-groups:
     proxies:
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
       - 🇺🇸_US_美国_3
       - 🇺🇸_US_美国_4
-      - 🇻🇳_VN_越南
       - 🇺🇸_US_美国_5
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_6
-      - 🇰🇷_KR_韩国
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -136,14 +135,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
       - 🇺🇸_US_美国_3
       - 🇺🇸_US_美国_4
-      - 🇻🇳_VN_越南
       - 🇺🇸_US_美国_5
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_6
-      - 🇰🇷_KR_韩国
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
   - name: 📲 电报信息
     type: select
     proxies:
@@ -151,14 +150,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
       - 🇺🇸_US_美国_3
       - 🇺🇸_US_美国_4
-      - 🇻🇳_VN_越南
       - 🇺🇸_US_美国_5
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_6
-      - 🇰🇷_KR_韩国
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
@@ -166,14 +165,14 @@ proxy-groups:
       - 🚀 节点选择
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
       - 🇺🇸_US_美国_3
       - 🇺🇸_US_美国_4
-      - 🇻🇳_VN_越南
       - 🇺🇸_US_美国_5
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_6
-      - 🇰🇷_KR_韩国
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -181,14 +180,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
       - 🇺🇸_US_美国_3
       - 🇺🇸_US_美国_4
-      - 🇻🇳_VN_越南
       - 🇺🇸_US_美国_5
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_6
-      - 🇰🇷_KR_韩国
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -213,14 +212,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
       - 🇺🇸_US_美国_3
       - 🇺🇸_US_美国_4
-      - 🇻🇳_VN_越南
       - 🇺🇸_US_美国_5
-      - 🇭🇰_HK_香港
       - 🇺🇸_US_美国_6
-      - 🇰🇷_KR_韩国
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_7
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
 
 rules:
 # 本地/局域网地址
