--- a/data/v2rayse-live.yaml
+++ b/data/v2rayse-live.yaml
@@ -1,7 +1,7 @@
 ####################################
 # 创建者：v2rayse.com
 # 客户端：Clash
-# 创建时间：2023-09-30 21:17:41
+# 创建时间：2023-10-01 09:26:37
 # 使用模版：V2RaySE 默认模版
 # 节点数量：10
 ####################################
@@ -85,16 +85,16 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"45.199.138.205","port":44094,"cipher":"auto","uuid":"20b30916-e203-412e-8ec0-900f3acd5128","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"142.4.112.149","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695177062956","headers":{"host":"www.67023582.xyz"}}}
-  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"142.4.112.134","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.80128693.xyz"}}}
-  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"198.2.222.71","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.62679611.xyz"}}}
-  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"64.32.24.222","port":443,"cipher":"auto","uuid":"cff9d860-7330-4ee1-b072-7142ddf1571d","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/080822272914"}}
-  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"142.0.129.250","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.64830206.xyz"}}}
+  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"198.200.56.108","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.62618992.xyz"}}}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"156.225.67.48","port":45493,"cipher":"auto","uuid":"3ca912da-6ac2-418f-b9cf-45b6f694579b","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇸🇬_SG_新加坡","type":"ss","server":"18.139.0.10","port":443,"password":"amazonskr05","cipher":"aes-256-cfb"}
+  - {"name":"🇫🇷_FR_法国","type":"vmess","server":"156.249.18.204","port":54885,"cipher":"auto","uuid":"d3133484-f2bf-4b0c-8d38-f8e645b65687","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"198.2.244.8","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.40735439.xyz"}}}
   - {"name":"🇳🇱_NL_荷兰","type":"vmess","server":"154.85.1.244","port":54982,"cipher":"auto","uuid":"1d474f0b-e78d-4af9-bc4a-a467467bc7a7","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇺🇸_US_美国_7","type":"vmess","server":"67.21.90.5","port":443,"cipher":"auto","uuid":"28dd6c26-05a5-4bba-8a5d-052b70ac13b2","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1694429908748","headers":{"host":"www.75409854.xyz"}}}
-  - {"name":"🇺🇸_US_美国_8","type":"vmess","server":"142.4.100.201","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.22567471.xyz"}}}
-  - {"name":"🇺🇸_US_美国_9","type":"vmess","server":"198.2.202.69","port":443,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1695993071029","headers":{"host":"www.49746402.xyz"}}}
+  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"us-04.cloudlion.me","port":2082,"cipher":"auto","uuid":"1a498bc2-582e-4caf-865d-51a99e7d2045","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"us-04.cloudlion.me"}}}
+  - {"name":"🇭🇰_HK_香港->🇳🇱_NL_荷兰","type":"vmess","server":"156.245.8.248","port":41671,"cipher":"auto","uuid":"964bf499-9ec0-4378-92b6-87d8d861b2d0","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"137.175.86.189","port":37399,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"45.199.138.220","port":55107,"cipher":"auto","uuid":"130c9f2e-42b1-4ebf-b345-e26456a061f9","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -103,14 +103,14 @@ proxy-groups:
       - DIRECT
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇸🇬_SG_新加坡
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_4
+      - 🇭🇰_HK_香港->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_5
       - 🇺🇸_US_美国_6
-      - 🇳🇱_NL_荷兰
-      - 🇺🇸_US_美国_7
-      - 🇺🇸_US_美国_8
-      - 🇺🇸_US_美国_9
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -119,14 +119,14 @@ proxy-groups:
     proxies:
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇸🇬_SG_新加坡
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_4
+      - 🇭🇰_HK_香港->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_5
       - 🇺🇸_US_美国_6
-      - 🇳🇱_NL_荷兰
-      - 🇺🇸_US_美国_7
-      - 🇺🇸_US_美国_8
-      - 🇺🇸_US_美国_9
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -135,14 +135,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇸🇬_SG_新加坡
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_4
+      - 🇭🇰_HK_香港->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_5
       - 🇺🇸_US_美国_6
-      - 🇳🇱_NL_荷兰
-      - 🇺🇸_US_美国_7
-      - 🇺🇸_US_美国_8
-      - 🇺🇸_US_美国_9
   - name: 📲 电报信息
     type: select
     proxies:
@@ -150,14 +150,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇸🇬_SG_新加坡
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_4
+      - 🇭🇰_HK_香港->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_5
       - 🇺🇸_US_美国_6
-      - 🇳🇱_NL_荷兰
-      - 🇺🇸_US_美国_7
-      - 🇺🇸_US_美国_8
-      - 🇺🇸_US_美国_9
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
@@ -165,14 +165,14 @@ proxy-groups:
       - 🚀 节点选择
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇸🇬_SG_新加坡
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_4
+      - 🇭🇰_HK_香港->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_5
       - 🇺🇸_US_美国_6
-      - 🇳🇱_NL_荷兰
-      - 🇺🇸_US_美国_7
-      - 🇺🇸_US_美国_8
-      - 🇺🇸_US_美国_9
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -180,14 +180,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇸🇬_SG_新加坡
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_4
+      - 🇭🇰_HK_香港->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_5
       - 🇺🇸_US_美国_6
-      - 🇳🇱_NL_荷兰
-      - 🇺🇸_US_美国_7
-      - 🇺🇸_US_美国_8
-      - 🇺🇸_US_美国_9
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -212,14 +212,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇸🇬_SG_新加坡
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_3
+      - 🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_4
+      - 🇭🇰_HK_香港->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_5
       - 🇺🇸_US_美国_6
-      - 🇳🇱_NL_荷兰
-      - 🇺🇸_US_美国_7
-      - 🇺🇸_US_美国_8
-      - 🇺🇸_US_美国_9
 
 rules:
 # 本地/局域网地址
